assets/css/main.css
/* ... */
.team-section .single-team .team-info h4 {
  font-size: 20px;
  margin-bottom: 5px;
}

.team-section .single-team .team-info p {
  font-size: 14px;
}

/* ========================
		TESTIMONIAL CSS
=========================== */
.testimonial-section {
  position: relative;
  padding-top: 120px;
  z-index: 1;
}

.testimonial-section::after {
  content: '';
  position: absolute;
  left: 0;
  top: 0;
  z-index: -1;
  width: 95%;
  height: 80%;
  background: linear-gradient(172.7deg, #D1D0FF 5.68%, #EFF0FF 72.76%);
  opacity: 0.2;
  border-radius: 5px;
}

.testimonial-section .testimonial-active-wrapper {
  position: relative;
}

@media (max-width: 767px) {
  .testimonial-section .testimonial-active-wrapper {
    padding-bottom: 80px;
  }
}

.testimonial-section .testimonial-active-wrapper .tns-controls {
  position: absolute;
  right: 0;
  top: -50px;
  width: 100%;
  z-index: 2;
  display: flex;
  align-items: center;
  justify-content: flex-end;
}

@media (max-width: 767px) {
  .testimonial-section .testimonial-active-wrapper .tns-controls {
    justify-content: center;
    top: auto;
    bottom: 0;
  }
}

.testimonial-section .testimonial-active-wrapper .tns-controls button {
  width: 45px;
  height: 45px;
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 3px;
  background: #fff;
  color: rgba(0, 0, 0, 0.9);
  border: 1px solid #0FC4A5;
  transition: all 0.3s ease-out 0s;
  box-shadow: 0px 3px 10px rgba(232, 232, 232, 0.25);
  margin: 0 5px;
}

.testimonial-section .testimonial-active-wrapper .tns-controls button:hover {
  background: #0FC4A5;
  color: #fff;
}

.testimonial-section .testimonial-active-wrapper .single-testimonial {
  background: #fff;
  box-shadow: 0px 0px 50px rgba(183, 199, 240, 0.25);
  border-radius: 5px;
  padding: 35px 40px;
  margin: 40px 0;
  border: 2px solid transparent;
  transition: all 0.3s ease-out 0s;
}

.testimonial-section .testimonial-active-wrapper .single-testimonial:hover {
  border-color: #0FC4A5;
}

.testimonial-section .testimonial-active-wrapper .single-testimonial .quote {
  font-size: 55px;
  line-height: 1;
  color: #0FC4A5;
  margin-bottom: 20px;
}

.testimonial-section .testimonial-active-wrapper .single-testimonial .content {
  margin-bottom: 30px;
}

.testimonial-section .testimonial-active-wrapper .single-testimonial .content p {
  font-size: 16px;
  line-height: 30px;
  color: rgba(0, 0, 0, 0.7);
  font-weight: 500;
  font-style: italic;
}

@media (max-width: 767px) {
  .testimonial-section .testimonial-active-wrapper .single-testimonial .content p {
    font-size: 18px;
    line-height: 28px;
    padding: 0px;
  }
}

.testimonial-section .testimonial-active-wrapper .single-testimonial .info {
  display: flex;
  align-items: center;
}

.testimonial-section .testimonial-active-wrapper .single-testimonial .info .image {
  max-width: 60px;
  width: 100%;
  height: 60px;
  margin-right: 14px;
  border-radius: 50%;
  overflow: hidden;
}

.testimonial-section .testimonial-active-wrapper .single-testimonial .info .image img {
  width: 100%;
}

.testimonial-section .testimonial-active-wrapper .single-testimonial .info h6 {
  font-size: 16px;
  font-weight: 500;
  font-family: "Inter", sans-serif;
  margin-bottom: 5px;
}

.testimonial-section .testimonial-active-wrapper .single-testimonial .info p {
  font-size: 14px;
  color: rgba(0, 0, 0, 0.5);
}

.testimonial-section .testimonial-images .testimonial-image {
  position: absolute;
  z-index: -1;
  max-width: 100%;
}

@media only screen and (min-width: 768px) and (max-width: 991px), (max-width: 767px) {
  .testimonial-section .testimonial-images .testimonial-image {
    display: none;
  }
}

.testimonial-section .testimonial-images .testimonial-image.image-1 {
  left: 10%;
  top: 30%;
}

.testimonial-section .testimonial-images .testimonial-image.image-2 {
  bottom: 5%;
  left: 15%;
}

.testimonial-section .testimonial-images .testimonial-image.image-3 {
  top: 5%;
  right: 10%;
}

.testimonial-section .testimonial-images .testimonial-image.image-4 {
  top: 40%;
  right: 12%;
}

@media only screen and (min-width: 992px) and (max-width: 1199px) {
  .testimonial-section .testimonial-images .testimonial-image.image-4 {
    right: 8%;
  }
}

/* ==========================
    FOOTER CSS
============================= */
.footer .footer-widget {
  margin-bottom: 50px;
}

.footer .footer-widget .logo {
  margin-bottom: 30px;
}

.footer .footer-widget .desc {
  margin-bottom: 25px;
}

@media only screen and (min-width: 1400px) {
  .footer .footer-widget .desc {
    padding-right: 50px;
  }
}

.footer .footer-widget .social-links {
  display: flex;
  align-items: center;
}

.footer .footer-widget .social-links li a {
  width: 44px;
  height: 44px;
  border-radius: 50%;
  background: transparent;
  color: rgba(0, 0, 0, 0.9);
  display: flex;
  align-items: center;
  justify-content: center;
  margin-right: 18px;
  font-size: 22px;
  border: 1px solid #0FC4A5;
}

.footer .footer-widget .social-links li a:hover {
  background: #0FC4A5;
  color: #fff;
}

.footer .footer-widget h3 {
  margin-bottom: 30px;
  margin-top: 10px;
  font-weight: 500;
}

.footer .footer-widget .links li a {
  font-size: 16px;
  line-height: 30px;
  color: rgba(0, 0, 0, 0.7);
}

.footer .footer-widget .links li a:hover {
  padding-left: 8px;
  color: #0FC4A5;
}

.footer .copyright {
  padding: 18px 0;
  text-align: center;
  color: rgba(0, 0, 0, 0.2);
  border-top: 1px solid rgba(0, 0, 0, 0.1);
}

.footer .copyright a {
  color: inherit;
}

.footer .copyright a:hover {
  color: #0FC4A5;
}

/* ======================
    DEFAULT CSS
========================= */
.mt-5 {
  margin-top: 5px;
}

.mt-10 {
  margin-top: 10px;
}

.mt-15 {
  margin-top: 15px;
}

.mt-20 {
  margin-top: 20px;
}

.mt-25 {
  margin-top: 25px;
}

.mt-30 {
  margin-top: 30px;
}

.mt-35 {
  margin-top: 35px;
}

.mt-40 {
  margin-top: 40px;
}

.mt-45 {
  margin-top: 45px;
}

.mt-50 {
  margin-top: 50px;
}

.mt-55 {
  margin-top: 55px;
}
/* ... */

